k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astraos
  labels:
    name: astraos
    app.kubernetes.io/name: astraos
    app.kubernetes.io/part-of: astra-os
